shaders are remove from metaballs on cycles render #48898

Closed
opened 2016-07-19 20:44:47 +02:00 by Nahuel Belich · 7 comments

System Information
win 7 x64

Blender Version
Broken: hash: 95da688
Working version: a92fc34

Short description of error
When render starts, viewport or final, using cycles, material slots are remove from the object.

Exact steps for others to reproduce the error

1- metaball shaer bug.blend
2- add a shader to the object
3- try render
4- if the material doesn´t dissapear from the properties window, thats a redraw glitch, move the cursor on the properties windows and shouldn't be there any more, also the render turns into a gray object, the renders its shadeless so its remove before doing the render.

**System Information** win 7 x64 **Blender Version** Broken: hash: 95da688 Working version: a92fc34 **Short description of error** When render starts, viewport or final, using cycles, material slots are remove from the object. **Exact steps for others to reproduce the error** 1- [metaball shaer bug.blend](https://archive.blender.org/developer/F325115/metaball_shaer_bug.blend) 2- add a shader to the object 3- try render 4- if the material doesn´t dissapear from the properties window, thats a redraw glitch, move the cursor on the properties windows and shouldn't be there any more, also the render turns into a gray object, the renders its shadeless so its remove before doing the render.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich

Added subscribers: @mont29, @kevindietrich

Added subscribers: @mont29, @kevindietrich

Bisected to ab993e373c

Bisected to ab993e373c
Bastien Montagne self-assigned this 2016-07-20 00:57:27 +02:00

Yeah, it’s actually caused by an old hack around a crash related to metaball materials… not sure why, fix sounds easy, will commit tomorrow.

Yeah, it’s actually caused by an old hack around a crash related to metaball materials… not sure why, fix sounds easy, will commit tomorrow.

This issue was referenced by 1270ab91be

This issue was referenced by 1270ab91be53fd90e404e6366c73cc99ba470b14

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48898
No description provided.